<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NovaTaxi v1.4</string>
    <string name="mapbox_access_token" tools:ignore="Typos">pk.eyJ1Ijoicm9ubnlucCIsImEiOiJjbGl4YTg3bDgwNHpwM2RucTlwdWFkOXN1In0.MlTnx-myS4E3LJUeh5CVbw</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre">Nombre y apellidos</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="numero_de_telefono">Número de teléfono</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="_53">+53</string>
    <string name="contraseña">Contraseña</string>
    <string name="Este_campo_no_debe">Este campo no debe estar vacío</string>
    <string name="Tiene_seguridad_guardar">¿Estás seguro de guardar estos datos?</string>
    <string name="cancelar_cuenta">Cancelar Cuenta</string>
    <string name="Tiene_seguridad_cancelar">¿Estás seguro de cancelar estos datos?</string>
    <string name="Acceder">Acceder</string>
    <string name="contrasena">Contraseña</string>
    <string name="Iniciar_sesion">Iniciar sesión</string>
    <string name="No_posee_cuenta">¿No posee cuenta?</string>
    <string name="confirmar_contraseña">Confirme su contraseña</string>
    <string name="olvido_su_contrasena">¿Olvidó su contraseña?</string>
    <string name="Recuperar">Recuperar</string>
    <string name="usuario_o_contrase_a_incorrectos">Usuario o contraseña incorrectos</string>
    <string name="Se_ha_producido_un_error">Se ha producido un error</string>
    <string name="Revise_su_conexion">Revise su conexión a Internet e intente de nuevo</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Recuperar_contrasena">Recuperar contraseña</string>
    <string name="enviaremos_contrasena_correo">Enviaremos su contraseña al correo que introduzca</string>
    <string name="sobreConductor">Sobre el conductor</string>
    <string name="NombreCondS">Nombre:</string>
    <string name="Nombre">Nombre</string>
    <string name="telefonoS">Teléfono:</string>
    <string name="telefono">Teléfono</string>
    <string name="precioKmS">Precio:</string>
    <string name="precioKm">Precio</string>
    <string name="tipoCarS">Tipo de vehículo:</string>
    <string name="tipoCar">Tipo de vehículo</string>
    <string name="Correo_enviado">Correo enviado</string>
    <string name="se_ha_enviado_contrasena">Se le ha enviado un correo con su contraseña a la dirección que proporcionó</string>
    <string name="Enviar_contrasena">Enviar contraseña</string>
    <string name="se_enviara_contrasena">Tiene seguridad de enviar su contraseña al correo: %s</string>
    <string name="version_incorrecta">Descargue la nueva versión disponible en: %s</string>
    <string name="contraseña_no_coincide">La contraseña no coincide</string>
    <string name="hemos_enviado_correo">Le hemos enviado un correo a %s .Por favor confirme su cuenta</string>
    <string name="mantenga_presionado_en_el_mapa_para_seleccionar_su_ubicaci_n">Mantenga presionado en el mapa para seleccionar una ubicación</string>
    <string name="adicionar_localizacion">Seleccionar localización</string>
    <string name="no_ha_añadido_su_posicion">No ha añadido su posición</string>
    <string name="acerca_de_nosotros">Acerca de nosotros</string>
    <string name="sobre_desarrolladores">Sobre desarrolladores</string>
    <string name="productos_informaticos">Productos Informáticos</string>
    <string name="nuestro_numero">55759386</string>
    <string name="ronnynordelo_gmail_com">ronnynordelo@gmail.com</string>
    <string name="https_www_facebook_com_qnecesitas_paginaprincipal">https://www.facebook.com/qnecesitas.paginaprincipal</string>
    <string name="misi_n">Misión</string>
    <string name="mision_nuestra">El enfoque que buscamos es el de una empresa acogedora, cuyos complicados servicios sean llevados a los clientes de forma fácil de comprender. Cuba es un país poco informatizado por lo que tenemos noción de que la mayoría de nuestros clientes conocen la importancia de llevar su negocio a las redes y la tecnología pero sus conocimientos de aplicaciones y páginas web son pocos o ninguno, así que si ese es su caso no se preocupe, solo tiene que decirnos alguna idea que tenga o la información que quiere informatizar y haremos magia.</string>
    <string name="qnecesitas">QNecesitas</string>
    <string name="qnecesitas_nat_cu">qnecesitas.nat.cu</string>
    <string name="sobre_nosotros">Sobre nosotros:</string>
    <string name="nova_taxi">Nova Taxi</string>
    <string name="numero_telefono">+53 51419534</string>
    <string name="direccion_empresa">Calle 13 no203 a entre 58 y 56, Holguín, Cuba</string>
    <string name="sobre_nosotros_desc">¡Bienvenido a nuestra empresa de taxis! Nos enorgullece ofrecer un servicio de transporte seguro y confiable a nuestros clientes. Nuestros conductores están altamente capacitados y cuentan con años de experiencia en la industria del transporte. Ya sea que necesite un viaje al aeropuerto o simplemente quiera explorar la ciudad, estamos aquí para ayudarlo. En nuestra empresa, nos esforzamos por brindar un servicio excepcional a nuestros clientes. Nos aseguramos de que nuestros vehículos estén siempre limpios y bien mantenidos para garantizar su comodidad y seguridad.</string>
    <string name="cantSeatS">Cantidad de asientos:</string>
    <string name="cantSeat">Cantidad</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="destino">Destino</string>
    <string name="pedir_taxi">Pedir Taxi</string>
    <string name="m_s_detalles">Más detalles</string>
    <string name="no">No</string>
    <string name="ConfirmTaxi">Confirmar</string>
    <string name="SeguroPedirTaxi">¿Está seguro de pedir este taxi?</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Version_desactualizada">Versión desactualizada</string>
    <string name="Correo_no_confirmado">Correo no confirmado</string>
    <string name="confirme_su_correo">Confirme el correo que le hemos enviado para continuar. Si está teniendo problemas en esto, comuníquese al: +5355759386</string>
    <string name="Cuenta_bloqueada">Cuenta bloqueada</string>
    <string name="No_podra_usar_app">Por términos de seguridad y legales su cuenta ha sido bloqueada</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="salir">Salir</string>
    <string name="seguro_desea_salir">¿Desea salir de la aplicación?</string>
    <string name="mi_ubicaci_n">Mi ubicación</string>
    <string name="foto_del_conductor">Foto del conductor</string>
    <string name="Escoger_ubicacion">Escoger ubicación</string>
    <string name="Desea_personal_ubicacion">Desea escoger su ubicación actual</string>
    <string name="Vaya_a_ajustes">Vaya a los ajustes y encienda la ubicación </string>
    <string name="Ubicacion_desconocida">Ubicación desactivada</string>
    <string name="Actualizando">Actualizando</string>
    <string name="error_al_encontrar_la_ubicaci_n">Error al encontrar la ubicación</string>
    <string name="editar_informaci_n_de_usuario">Editar información de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="actualizar">Actualizar</string>
    <string name="informaci_n">Información</string>
    <string name="acerca_de_nosotros1">Acerca de nosotros</string>
    <string name="acerca_de_los_desarrolladores">Acerca de los desarrolladores</string>
    <string name="ajustes">Ajustes</string>
    <string name="actualizar_cuenta">Actualizar cuenta</string>
    <string name="est_s_seguro_de_actualizar_los_datos_de_tu_cuenta">¿Estás seguro de actualizar los datos de tu cuenta?</string>
    <string name="Sobre_nosotros">Sobre nosotros</string>
    <string name="error_al_encontrar_la_ruta">Error al encontrar la ruta</string>
    <string name="cargando">Cargando</string>
    <string name="valorado_con_exito">Valorado con éxito</string>
    <string name="error_al_valorar">Error al valorar</string>
    <string name="valore_su_ltimo_viaje">Valore su último viaje</string>
    <string name="valorar">Valorar</string>
    <string name="descargar">Descargar</string>
    <string name="confirmar_cuenta">Confirmar cuenta</string>
    <string name="el_correo_ya_existe">El correo ya existe</string>
    <string name="ya_existe_una_cuenta_creada_con_ese_correo">Ya existe una cuenta creada con ese correo</string>
    <string name="viaje_finalizado">Viaje finalizado</string>
    <string name="terminos_condiciones">Términos y condiciones</string>
    <string name="licencia_texto">Licencia
La aplicación de Ya En Casa está bajo el uso de la licencia Creative Commons.
¿Cómo funcionan las Licencias Creative Commons?
Las licencias Creative Commons se basan en el derecho de autor, con lo cual la obra sigue perteneciendo al dominio privativo, pero con excepciones y limitaciones que son elegidas y explícitas por el autor de la obra. Un autor, que desea otorgar algunos permisos sobre su trabajo, para que terceros puedan copiarlo, o modificarlo sin problemas de copyright, puede licenciar su obra bajo una licencia CC y de esa forma explicitar su voluntad de que la obra circule sin restricciones legales.
Esta licencia contiene: Reconocimiento-NoComercial-SinDerivadas 4.0 Internacional (CC BY-NC-ND 4.0).
Eres libre de : Compartir, copiar y redistribuir el material en cualquier medio o formato. El licenciante no puede revocar estas libertades mientras siga los siguientes términos de la licencia:
Reconocimiento : Debe otorgar el crédito correspondiente , proporcionar un enlace a la licencia e indicar si se realizaron cambios . Puede hacerlo de cualquier manera razonable, pero no de ninguna manera que sugiera que el licenciante lo respalda a usted o su uso.
No comercial : No puede utilizar el material con fines comerciales.
No Derivatives : Si remezcla, transforma o construye sobre el material, no puede distribuir el material modificado.
Sin restricciones adicionales : No puede aplicar términos legales o medidas tecnológicas que restrinjan legalmente a otros de hacer cualquier cosa que permita la licencia.
</string>
    <string name="condiciones_texto">..........</string>
    <string name="politica_privacidad_texto">Política de privacidad
La aplicación NovaTaxi es un software móvil a través del cual el usuario puede encontrar y solicitar el servicio de taxis para una ruta determinada por el propio cliente. La presente Política de Privacidad establece los términos en que NovaTaxi usa y protege la información proporcionada por los usuarios al momento de usar la aplicación. Esta Política de Privacidad puede cambiar con el tiempo por lo que recomendamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.
Información que es recogida:
La información es brindada por el mismo usuario. Tomamos su ubicación para saber cuál será la ruta a cumplir, también utilizaremos el correo electrónico del cliente, su nombre y número telefónico.
Información de terceros:
El contenido es brindado por NovaTaxi, los creadores no nos responsabilizamos de dicho contenido.No nos responsabilizamos por los datos dados por el usuario que no se correspondan con ubicación, correo electrónico, número de teléfono y nombre. Está aplicación no comparte datos con terceros.
</string>
    <string name="Conductor">Conductor:</string>
    <string name="Cliente">Cliente:</string>
    <string name="Distancia">Distancia:</string>
    <string name="Fecha">Fecha:</string>
    <string name="tiempo_de_espera">Tiempo de espera:</string>
    <string name="Precio_por_espera">Precio por espera:</string>
    <string name="Precio_del_viaje">Precio del viaje:</string>
    <string name="precioTotal">Precio total:</string>
    <string name="chapaS">Chapa:</string>
</resources>