<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="28sp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10sp"
        app:cardCornerRadius="@dimen/card_my_elevation"
        android:translationZ="@dimen/cardview_default_elevation"
        android:layout_margin="2sp"
        android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viaje_finalizado"
                    android:textSize="@dimen/text_m"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20sp"/>


                <!--Driver name-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/Conductor"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/driverName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <!--NumberPlate-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/chapaS"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/numberPlate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <!--Client name-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/Cliente"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/client_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <!--Distance-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/Distancia"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <!--Date-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/Fecha"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <!--Await time-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/tiempo_de_espera"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/awaitTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <!--Await price-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/Precio_por_espera"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/await_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <!--Travel price-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/Precio_del_viaje"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/tripPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <!--Type car-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/tipoCarS"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/typeCar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <!--Total price-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/precioTotal"
                        android:layout_marginStart="12dp"/>

                    <TextView
                        android:id="@+id/totalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cargando"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/aceptar"
                    android:text="@string/Aceptar"
                    android:layout_marginBottom="12dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>