<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="28sp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10sp"
        app:cardCornerRadius="@dimen/card_my_elevation"
        android:translationZ="@dimen/cardview_default_elevation"
        android:layout_margin="2sp"
        android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/liT_IV_cerrar"
            android:layout_width="24sp"
            android:layout_height="24sp"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="?attr/colorOnSurface"
            android:layout_gravity="end"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terminos_condiciones"
                    android:textSize="@dimen/text_m"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/licencia_texto"
                    android:textSize="@dimen/text_s"
                    android:layout_marginStart="12sp"
                    android:layout_marginEnd="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiciones_texto"
                    android:textSize="@dimen/text_s"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="20sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/politica_privacidad_texto"
                    android:textSize="@dimen/text_s"
                    android:layout_marginStart="12sp"
                    android:layout_marginEnd="12sp"
                    android:layout_marginBottom="20sp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>