<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:background="@color/background">

<!--Toolbar-->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/seed"
        app:title="@string/crear_cuenta"
        app:titleTextColor="@color/md_theme_light_onPrimaryContainer">


    </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/AppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginStart="15dp">

            <ImageView
                android:layout_margin="12dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/baseline_account_circle_24"
                android:background="@drawable/clientimage"
                android:translationZ="8dp"
                android:importantForAccessibility="no"
                app:tint="?attr/colorControlNormal"/>

              <!--UserName-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center_vertical"
                android:id="@+id/TIL_name"
                android:layout_width="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                style="@style/CustomTextInputLayout"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIET_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:maxLength="250">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            style="@style/CustomTextInputLayout"
            android:background="@color/white">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TIET_email"
                android:layout_width="wrap_content"
                android:minWidth="400dp"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                android:maxLength="250">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Number Phone-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/_53"
                android:textSize="20sp">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                style="@style/CustomTextInputLayout"
                android:background="@color/white">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIET_phone"
                    android:layout_width="match_parent"
                    android:minWidth="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero_de_telefono"
                    android:inputType="phone"
                    android:maxLength="8">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            style="@style/CustomTextInputLayout"
            android:background="@color/white">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TIET_password"
                android:layout_width="match_parent"
                android:minWidth="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:maxLength="100">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <!--Button Cancel-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Button_redonded_filled"
        android:backgroundTint="@color/white"
        android:id="@+id/cancel_account">

    </Button>
    <!--Button Accept-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Button_redonded_filled"
        android:textColor="@color/white"
        android:id="@+id/accept_account">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>